<resources>
    <string name="app_name">VaClases</string>
    <string name="action_cambio_pass">Cambiar Contraseña</string>
    <string name="action_salir">Cerrar sesión</string>
    <string name="action_save">Guardar</string>
    <string name="hijo">Hijo</string>
    <string name="registro_activity">Registro</string>
    <string name="titulo_tab_mensaje">MENSAJES</string>
    <string name="titulo_tab_evento">EVENTOS</string>
    <string name="titulo_tab_validacion">VALIDACIÓN</string>
    <string name="title_activity_login">Login VaClases</string>
    <string name="title_activity_configuration">Ajustes</string>
    <string name="title_activity_tutorial">TutorialActivity</string>
    <string name="title_intro_activity">Tutorial</string>
    <string name="txt_registrate">¿No tienes cuenta?</string>
    <string name="btnregistro">Regístrate</string>
    <string name="txtUser">Usuario</string>
    <string name="txtPass">Contraseña</string>
    <string name="txtLogin">Iniciar sesión</string>
    <string name="txtOlvideLogin">¿Olvido su información de inicio de sesión?</string>
    <string name="btnOlvideLogin">Obten ayuda para iniciar sesión</string>
    <string name="guardar_pref">Cambiar</string>
    <string name="cancelar_pref">Cancelar</string>
    <string name="cofirm_pass">Confirme Contraseña</string>
    <string name="new_pass">Nueva Contraseña</string>
    <string name="num_cedula">Número de cedula</string>
    <string name="txtTituloEncuesta">Encuesta: Responde Las Siguientes Preguntas</string>
    <string name="txtImgEnciesta">Encuesta</string>
    <string name="btnValidar">Validar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="imgVaClases">VaClases</string>
    <string name="txtTituloValidacionClase">Marca los días en que hubo clases en tu centro educativo</string>
    <string name="action_cambio_info">Comunicate con nosotros</string>
    <string name="txtNoAsistira">No Asistira</string>
    <string name="txtSiAsistira">Asistira</string>
    <string name="txtTituloDialogEvento">Confirma la participación de tu hijo al evento</string>
    <string name="old_pass">Contraseña anterior</string>
    <string name="btnCambioPass">Cambiar Contraseña</string>
    <string name="n_mero_de_identidad">Número de identidad</string>
    <string name="n_mero_telef_nico">Número telefónico</string>
    <string name="confirme_su_n_mero_telef_nico">Confirme su número telefónico</string>
    <string name="identidad_de_su_hijo">Identidad de su hijo</string>
    <string name="txt_bienvenida_login">Bienvenido a la plataforma VaClases, para poder ingresar en un futuro,
        su usuario sera su número de identidad, su contraseña será el número de telefono que ha ingresado,
        podra cambiarlo dentro de la aplicación si desea.</string>
    <string name="registro_exitoso_a_la_plataforma">Registro exitoso a la plataforma</string>
    <string name="asunto">Asunto</string>
    <string name="redactar_mensaje">Redactar mensaje</string>
    <string name="cancelar">Cancelar</string>
    <string name="enviar">Enviar</string>
    <string name="ver_el_centro_educativo_de">Ver el centro educativo de...</string>
    <string name="action_email">Enviar Correo</string>
    <string name="intentar_nuevamente">Intentar nuevamente</string>
</resources>
