<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hn.uth.hackaton.MainActivity">
    <item
        android:id="@+id/action_cambio_pass"
        android:orderInCategory="100"
        android:title="@string/action_cambio_pass"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_email"
        android:orderInCategory="100"
        android:title="@string/action_email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_salir"
        android:orderInCategory="100"
        android:title="@string/action_salir"
        app:showAsAction="never" />
    <item
        android:id="@+id/hijo"
        android:icon="@drawable/ic_action_person"
        android:orderInCategory="100"
        android:title="@string/hijo"
        app:showAsAction="ifRoom" />
</menu>
