<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/RelativeDialogParticipacion"
    android:background="#FFFFFF">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sombra"
        android:id="@+id/relativeLayout">

        <ImageView
            android:layout_width="100dip"
            android:layout_height="55dip"
            android:id="@+id/imageView3"
            android:src="@drawable/validacion_check"
            android:layout_centerVertical="true"
            android:contentDescription="@string/imgVaClases" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtTituloDialogEvento"
            android:id="@+id/txtTitulo_dialog_Eve"
            android:textColor="@color/letraPrimary"
            android:layout_centerVertical="true"
            android:paddingLeft="0dp"
            android:paddingRight="10dp"
            android:layout_toRightOf="@id/imageView3"
            android:layout_toEndOf="@id/imageView3" />

    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Listo"
        android:id="@+id/btnEve_list"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:layout_below="@+id/img_kids_eve"
        android:layout_alignParentRight="true"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        android:id="@+id/btnEve_cance"
        android:background="@color/letraPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginRight="25dp"
            android:layout_alignTop="@id/btnEve_list"
        android:layout_toLeftOf="@id/btnEve_list"
        android:layout_toStartOf="@id/btnEve_list" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioEve"
        android:layout_alignTop="@+id/img_kids_eve"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="30dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtSiAsistira"
            android:id="@+id/rdbSi" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtNoAsistira"
            android:layout_marginTop="10dp"
            android:id="@+id/rdbNo" />
    </RadioGroup>

    <ImageView
        android:layout_width="150dip"
        android:layout_height="130dip"
        android:id="@+id/img_kids_eve"
        android:src="@drawable/kids2"
        android:layout_below="@id/relativeLayout"
        android:layout_marginTop="10dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="0dp"
        android:contentDescription="@string/imgVaClases" />

</RelativeLayout>