<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/RelativeDialogEncuesta"
    android:background="#FFFFFF">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/sombra"
        android:id="@+id/relativeLayout">


        <ImageView
            android:layout_width="100dip"
            android:layout_height="55dip"
            android:id="@+id/imageViewcheck_pro"
            android:src="@drawable/img_val_problemas"
            android:layout_centerVertical="true"
            android:contentDescription="@string/txtImgEnciesta" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/txtTituloEncuesta"
            android:id="@+id/txtTitulo_dialog_val_pro"
            android:textColor="@color/letraPrimary"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/imageViewcheck_pro"
            android:layout_toEndOf="@id/imageViewcheck_pro" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/relativeLayout"
        android:id="@+id/ScrollEncuesta"
        android:padding="5dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="208dip">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/LinearEncuesta">

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnValidar"
        android:id="@+id/btnVal_val_pro"
        android:background="@color/colorAccent"
        android:textColor="#FFFFFF"
        android:layout_alignParentRight="true"
        android:layout_below="@id/ScrollEncuesta"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCancelar"
        android:id="@+id/btnVal_cance_pro"
        android:background="@color/letraPrimary"
        android:textColor="#FFFFFF"
        android:layout_marginRight="20dp"
        android:layout_alignTop="@id/btnVal_val_pro"
        android:layout_toLeftOf="@id/btnVal_val_pro"
        android:layout_toStartOf="@id/btnVal_val_pro" />

</RelativeLayout>
